trying to fix weird inconsistent tab wrapping issue on front-end. this is a stab in the dark.

--- a/admin/assets/less/dialog.less
+++ b/admin/assets/less/dialog.less
@@ -88,7 +88,7 @@
   
   body {
 	  border: 6px solid @grayDark !important;
-  }
+	  }
 }
 
 #frontEndToolsModaliframe {
@@ -109,7 +109,7 @@
 
 #frontEndToolsModalClose {
 	position: absolute;
-	top: 35px;
+	top: 23px;
 	right: 18px;
 	color: @gray;
 	.inline-block;
